--- a/index.html
+++ b/index.html
@@ -1,7 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RuwayHsu滷滷熊熊</title>
+    <style>
+        body {
+            background: linear-gradient(to bottom, #2a1a3d, #000000);
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .nav {
+            background: #3a2a4d;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .nav a {
+            color: #ff99cc;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .nav a:hover {
+            color: #ffffff;
+        }
+        .section {
+            margin: 20px 0;
+            padding: 20px;
+            background: #1a1a2e;
+            border-radius: 10px;
+        }
+        h1, h2, h3 {
+            color: #ff99cc;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        .footer {
+            text-align: center;
+            padding: 20px;
+            color: #ff99cc;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="nav">
+        <a href="#home">首頁</a>
+        <a href="#commission">委託資訊</a>
+        <a href="#twitch">Twitch指令說明</a>
+    </div>
+
+    <div class="container">
+        <!-- 首頁 -->
+        <div id="home" class="section">
+            <h1>RuwayHsu滷滷熊熊</h1>
+            <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
+            <h3>人物介紹</h3>
+            <ul>
+                <li>滷滷熊熊、熊熊、滷滷、RuwayHsu、루루셩셩</li>
+                <li><strong>人設:</strong> 可實體化的幽靈</li>
+                <li><strong>生日:</strong> 西元2005年1月20日</li>
+                <li><strong>語言能力:</strong> 中文(臺灣)</li>
+                <li><strong>目前崗位:</strong> 技術支援、效率組、AI技術負責(也是此AI創作者)、外交人</li>
+                <li><strong>興趣:</strong> 打遊戲、踩地雷(?、閱讀懸疑小說、思考藝術作品</li>
+                <li><strong>人格特質:</strong> INTJ-T</li>
+                <li><strong>經濟狀況:</strong> 跪求抖內</li>
+            </ul>
+            <h3>遊戲</h3>
+            <ul>
+                <li><strong>CS2:</strong> 最近剛開始接觸</li>
+                <li><strong>osu!:</strong> Lazer版本std滑鼠玩家，全球排名46k</li>
+                <li><strong>Minecraft:</strong> 玩十年了但記憶都在1.12那一個版本</li>
+            </ul>
+            <h3>喜歡吃的食物</h3>
+            <ul>
+                <li>薯條、義大利麵、咖哩飯、熱狗堡、漢堡、炸雞、台灣特色小吃(no 海鮮)、蔬菜</li>
+            </ul>
+            <h3>討厭吃的食物</h3>
+            <ul>
+                <li>海鮮</li>
+            </ul>
+        </div>
+
+        <!-- 委託資訊 -->
+        <div id="commission" class="section">
+            <h2>委託資訊</h2>
+            <h3>Discord Bot客製化服務</h3>
+            <p><strong>注意事項 Precautions</strong></p>
+            <ul>
+                <li>使用Python語言</li>
+                <li>會提供虛擬環境以及執行批次檔</li>
+                <li>第一次執行時有可能會有些許意外所以我需要一旁觀察</li>
+                <li>我會在你的群觀察程式是否有bug(委託能動就好方案則不會)</li>
+                <li>但如果是因為自己修改原始碼導致的bug，不處理，想嘗試請自行備份</li>
+                <li>買斷者我會教你如何創建自己的機器人</li>
+                <li>會透過Claude.ai將程式整理優化，可選擇不使用AI工具但價格和保養複雜度由你承擔</li>
+            </ul>
+            <h3>議價規則</h3>
+            <p><strong>行數計算 Effective Line of Code (ELOC)</strong></p>
+            <ul>
+                <li>不含註解、不含美觀換行、不含簡單全域變數宣告行、不含引入和定義</li>
+                <li>只有含有功能的程式和定義的副函式才會納入計算</li>
+                <li>50行為1單位並且會根據情況做定價，並且保證你不會有任何虧損請放心</li>
+                <li>(例如第一項功能70行第二項功能98行，會以功能一50行和功能二100行定價)</li>
+                <li>如果呼叫到一次副函式，那麼該行呼叫函式行會算為被呼叫函式的行數</li>
+                <li>(簡單來說有5行程式，但其中一行是呼叫7行的函式，那我會算為4+7=11行，估算為10行)</li>
+                <li>根據功能困難度定價1單位，分為1000、1500、2000，困難度可以進行討論而定義</li>
+            </ul>
+        </div>
+
+        <!-- Twitch指令說明 -->
+        <div id="twitch" class="section">
+            <h2>Twitch指令說明</h2>
+            <h3>指令使用說明</h3>
+            <ul>
+                <li>指令前面一定要加半形驚嘆號</li>
+                <li>說明中有畫底線的皆為可以自行調整的數值或參數</li>
+            </ul>
+            <h3>可使用指令</h3>
+            <ul>
+                <li><strong>!dc</strong> - 機器人會輸出Zen Studio的Discord群組連結</li>
+                <li><strong>!yt</strong> - 機器人會輸出我的YouTube頻道連結</li>
+                <li><strong>!osu</strong> - 機器人會輸出我的osu!個人檔案連結</li>
+            </ul>
+            <h3>賭博指令</h3>
+            <ul>
+                <li><strong>!賭 number(整數值)</strong> - 使用你持有貢丸中的<span style="text-decoration: underline;">number</span>顆進行賭博，CD時間為1分鐘</li>
+                <li><strong>!賭 percentage(可小數但建議整數)%</strong> - 使用你持有貢丸中的<span style="text-decoration: underline;">percentage%</span>進行賭博，CD時間為1分鐘</li>
+                <li><strong>!賭 all</strong> - 使用你所有的貢丸進行賭博，CD時間為1分鐘</li>
+                <li><strong>!給 使用者名稱(不需要加@也不要使用暱稱) number(整數值)</strong> - 給予使用者名稱之用戶<span style="text-decoration: underline;">number</span>顆貢丸</li>
+                <li><strong>!查</strong> - 查詢你的貢丸數量</li>
+                <li><strong>!領取</strong> - 可以手動領取20顆貢丸，CD時間為30分鐘</li>
+            </ul>
+            <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>© 2023 RuwayHsu滷滷熊熊 | 跪求抖內支持</p>
+    </div>
 </body>
 </html>
