--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
             list-style-type: disc;
             padding-left: 20px;
         }
+        /* 按鈕樣式 */
+        .button {
+            background: transparent; /* 透明背景 */
+            border: 2px solid #ff69b4; /* 粉色外框 */
+            color: #ff69b4; /* 粉紅色文字 */
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background 0.3s, color 0.3s;
+            flex: 1 1 20%; /* 寬螢幕時每行4個 */
+            max-width: 20%;
+            text-align: center;
+        }
+
+        /* 懸停效果 */
+        .button:hover {
+            background: #ff69b4; /* 懸停時背景變粉色 */
+            color: #ffffff; /* 文字變白色 */
+        }
+
+        /* 窄螢幕布局 */
+        @media (max-width: 768px) {
+            .button {
+                flex: 1 1 40%; /* 窄螢幕時每行2個 */
+                max-width: 40%;
+            }
+        }
         .footer {
             text-align: center;
             padding: 20px;
@@ -142,6 +170,16 @@
             </ul>
             <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
         </div>
+    </div>
+    <div class="social-buttons">
+        <a href="https://www.youtube.com/@RuwayHsu" target="_blank" class="button">YouTube</a>
+        <a href="https://www.twitch.tv/ruwayhsu" target="_blank" class="button">Twitch</a>
+        <a href="https://x.com/ruwayhsu" target="_blank" class="button">X (Twitter)</a>
+        <a href="https://bsky.app/profile/ruwayhsu.bsky.social" target="_blank" class="button">Bluesky</a>
+        <a href="https://discord.gg/CmbWrJb9em" target="_blank" class="button">Discord</a>
+        <a href="https://osu.ppy.sh/users/19005866" target="_blank" class="button">osu!</a>
+        <a href="https://x.com/RuwayHsuPBC" target="_blank" class="button">X (PBC)</a>
+        <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
     </div>
 
     <div class="footer">
