--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             list-style-type: disc;
             padding-left: 20px;
         }
+        /* 選取框（藍色） */
+        .social-buttons {
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
         /* 按鈕樣式 */
         .button {
             background: transparent; /* 透明背景 */
