--- a/index.html
+++ b/index.html
@@ -179,16 +179,21 @@
             </ul>
             <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
         </div>
-        <div class="social-buttons">
-            <a href="https://www.youtube.com/@RuwayHsu" target="_blank" class="button">YouTube</a>
-            <a href="https://www.twitch.tv/ruwayhsu" target="_blank" class="button">Twitch</a>
-            <a href="https://x.com/ruwayhsu" target="_blank" class="button">X (Twitter)</a>
-            <a href="https://bsky.app/profile/ruwayhsu.bsky.social" target="_blank" class="button">Bluesky</a>
-            <a href="https://discord.gg/CmbWrJb9em" target="_blank" class="button">Discord</a>
-            <a href="https://osu.ppy.sh/users/19005866" target="_blank" class="button">osu!</a>
-            <a href="https://x.com/RuwayHsuPBC" target="_blank" class="button">X (PBC)</a>
-            <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
+        <div id="button" class="section">
+            <h2>更多連結</h2>
+            <p>這裡是一些社交媒體的按鈕，點擊可以訪問我的社交媒體頁面。</p>
+            <div class="social-buttons">
+                <a href="https://www.youtube.com/@RuwayHsu" target="_blank" class="button">YouTube</a>
+                <a href="https://www.twitch.tv/ruwayhsu" target="_blank" class="button">Twitch</a>
+                <a href="https://x.com/ruwayhsu" target="_blank" class="button">X (Twitter)</a>
+                <a href="https://bsky.app/profile/ruwayhsu.bsky.social" target="_blank" class="button">Bluesky</a>
+                <a href="https://discord.gg/CmbWrJb9em" target="_blank" class="button">Discord</a>
+                <a href="https://osu.ppy.sh/users/19005866" target="_blank" class="button">osu!</a>
+                <a href="https://x.com/RuwayHsuPBC" target="_blank" class="button">X (PBC)</a>
+                <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
+            </div>
         </div>
+
     </div>
 
 
