--- a/index.html
+++ b/index.html
@@ -44,7 +44,39 @@
             list-style-type: disc;
             padding-left: 20px;
         }
-        /* 選取框（藍色） */
+        /* 首頁內容布局 */
+        .home-content {
+            display: flex;
+            gap: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+            flex-wrap: wrap; /* 允許在小螢幕上換行 */
+        }
+        .left-column {
+            flex: 0 0 40%;
+            max-width: 40%;
+        }
+        .right-column {
+            flex: 1;
+            text-align: left;
+        }
+        .left-column img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px; /* 圖片圓角 */
+        }
+        /* 響應式設計 */
+        @media (max-width: 768px) {
+            .home-content {
+                flex-direction: column;
+                align-items: center;
+            }
+            .left-column, .right-column {
+                max-width: 100%;
+                flex: 1 1 100%;
+            }
+        }
+        /* 社群按鈕樣式 */
         .social-buttons {
             padding: 20px;
             display: flex;
@@ -53,31 +85,26 @@
             gap: 20px;
             margin: 20px 0;
         }
-        /* 按鈕樣式 */
         .button {
-            background: transparent; /* 透明背景 */
-            border: 2px solid #ff69b4; /* 粉色外框 */
-            color: #ff69b4; /* 粉紅色文字 */
+            background: transparent;
+            border: 2px solid #ff69b4;
+            color: #ff69b4;
             padding: 10px 20px;
             border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
             transition: background 0.3s, color 0.3s;
-            flex: 1 1 20%; /* 寬螢幕時每行4個 */
+            flex: 1 1 20%;
             max-width: 20%;
             text-align: center;
         }
-
-        /* 懸停效果 */
         .button:hover {
-            background: #ff69b4; /* 懸停時背景變粉色 */
-            color: #ffffff; /* 文字變白色 */
+            background: #ff69b4;
+            color: #ffffff;
         }
-
-        /* 窄螢幕布局 */
         @media (max-width: 768px) {
             .button {
-                flex: 1 1 40%; /* 窄螢幕時每行2個 */
+                flex: 1 1 40%;
                 max-width: 40%;
             }
         }
@@ -93,38 +120,46 @@
         <a href="#home">首頁</a>
         <a href="#commission">委託資訊</a>
         <a href="#twitch">Twitch指令說明</a>
+        <a href="#button">更多連結</a>
     </div>
 
     <div class="container">
         <!-- 首頁 -->
         <div id="home" class="section">
             <h1>RuwayHsu滷滷熊熊</h1>
-            <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
-            <h3>人物介紹</h3>
-            <ul>
-                <li>滷滷熊熊、熊熊、滷滷、RuwayHsu、루루셩셩</li>
-                <li><strong>人設:</strong> 可實體化的幽靈</li>
-                <li><strong>生日:</strong> 西元2005年1月20日</li>
-                <li><strong>語言能力:</strong> 中文(臺灣)</li>
-                <li><strong>目前崗位:</strong> 技術支援、效率組、AI技術負責(也是此AI創作者)、外交人</li>
-                <li><strong>興趣:</strong> 打遊戲、踩地雷(?、閱讀懸疑小說、思考藝術作品</li>
-                <li><strong>人格特質:</strong> INTJ-T</li>
-                <li><strong>經濟狀況:</strong> 跪求抖內</li>
-            </ul>
-            <h3>遊戲</h3>
-            <ul>
-                <li><strong>CS2:</strong> 最近剛開始接觸</li>
-                <li><strong>osu!:</strong> Lazer版本std滑鼠玩家，全球排名46k</li>
-                <li><strong>Minecraft:</strong> 玩十年了但記憶都在1.12那一個版本</li>
-            </ul>
-            <h3>喜歡吃的食物</h3>
-            <ul>
-                <li>薯條、義大利麵、咖哩飯、熱狗堡、漢堡、炸雞、台灣特色小吃(no 海鮮)、蔬菜</li>
-            </ul>
-            <h3>討厭吃的食物</h3>
-            <ul>
-                <li>海鮮</li>
-            </ul>
+            <div class="home-content">
+                <div class="left-column">
+                    <img src="https://cdn.discordapp.com/attachments/1240945365511835769/1366102528030277662/Profolio.png?ex=680fb99f&is=680e681f&hm=676c268c750e5b938d6ffc6fd54fdf422f74978df2a60cf99111edbf6edfb489&" alt="RuwayHsu">
+                </div>
+                <div class="right-column">
+                    <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
+                    <h3>人物介紹</h3>
+                    <ul>
+                        <li>滷滷熊熊、熊熊、滷滷、RuwayHsu、루루셩셩</li>
+                        <li><strong>人設:</strong> 可實體化的幽靈</li>
+                        <li><strong>生日:</strong> 西元2005年1月20日</li>
+                        <li><strong>語言能力:</strong> 中文(臺灣)</li>
+                        <li><strong>目前崗位:</strong> 技術支援、效率組、AI技術負責(也是此AI創作者)、外交人</li>
+                        <li><strong>興趣:</strong> 打遊戲、踩地雷(?、閱讀懸疑小說、思考藝術作品</li>
+                        <li><strong>人格特質:</strong> INTJ-T</li>
+                        <li><strong>經濟狀況:</strong> 跪求抖內</li>
+                    </ul>
+                    <h3>遊戲</h3>
+                    <ul>
+                        <li><strong>CS2:</strong> 最近剛開始接觸</li>
+                        <li><strong>osu!:</strong> Lazer版本std滑鼠玩家，全球排名46k</li>
+                        <li><strong>Minecraft:</strong> 玩十年了但記憶都在1.12那一個版本</li>
+                    </ul>
+                    <h3>喜歡吃的食物</h3>
+                    <ul>
+                        <li>薯條、義大利麵、咖哩飯、熱狗堡、漢堡、炸雞、台灣特色小吃(no 海鮮)、蔬菜</li>
+                    </ul>
+                    <h3>討厭吃的食物</h3>
+                    <ul>
+                        <li>海鮮</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <!-- 委託資訊 -->
@@ -193,9 +228,7 @@
                 <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
             </div>
         </div>
-
     </div>
-
 
     <div class="footer">
         <p>© 2023 RuwayHsu滷滷熊熊 | 跪求抖內支持</p>
