--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         }
         /* 社群按鈕樣式 */
         .social-buttons {
-            padding: 20px;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -103,9 +102,9 @@
             text-decoration: none;
             font-weight: bold;
             transition: background 0.3s, color 0.3s;
-            flex: 1 1 20%;
-            max-width: 20%;
             text-align: center;
+            flex: 0 0 calc(25% - 20px); /* 寬螢幕時每行4個 */
+            box-sizing: border-box;
         }
         .button:hover {
             background: #ff69b4;
@@ -113,8 +112,7 @@
         }
         @media (max-width: 768px) {
             .button {
-                flex: 1 1 40%;
-                max-width: 40%;
+                flex: 0 0 calc(50% - 20px); /* 窄螢幕時每行2個 */
             }
         }
         .footer {
@@ -129,7 +127,7 @@
         <a href="#home">首頁</a>
         <a href="#commission">委託資訊</a>
         <a href="#twitch">Twitch指令說明</a>
-        <a href="#button">更多連結</a>
+        <a href="#links">更多連結</a>
     </div>
 
     <div class="container">
@@ -223,7 +221,9 @@
             </ul>
             <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
         </div>
-        <div id="button" class="section">
+
+        <!-- 更多連結 -->
+        <div id="links" class="section">
             <h2>更多連結</h2>
             <p>這裡是一些社交媒體的按鈕，點擊可以訪問我的社交媒體頁面。</p>
             <div class="social-buttons">
