--- a/index.html
+++ b/index.html
@@ -44,19 +44,25 @@
             list-style-type: disc;
             padding-left: 20px;
         }
-        /* 首頁內容布局 */
+        /* 首頁獨立樣式 */
+        #home-section {
+            margin: 20px 0;
+            padding: 20px;
+            background: #1a1a2e;
+            border-radius: 10px;
+        }
         .home-content {
             display: flex;
             gap: 20px;
             max-width: 1200px;
             margin: 0 auto;
-            align-items: stretch; /* 確保兩欄高度一致 */
+            align-items: stretch;
         }
         .left-column {
-            flex: 0 0 50%; /* 佔據左半部分 */
+            flex: 0 0 50%;
             max-width: 50%;
-            position: relative; /* 為圖片定位 */
-            overflow: hidden; /* 隱藏超出部分 */
+            position: relative;
+            overflow: hidden;
         }
         .left-column img {
             position: absolute;
@@ -64,8 +70,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover; /* 圖片補滿容器 */
-            border-radius: 10px; /* 圖片圓角 */
+            object-fit: cover;
+            border-radius: 10px;
         }
         .right-column {
             flex: 1;
@@ -73,20 +79,30 @@
             padding: 20px;
         }
         /* 響應式設計 */
-        @media (max-width: 768px) {
+        @media (max-width: 960px) {
             .home-content {
-                flex-direction: column; /* 窄螢幕時垂直排列 */
+                flex-direction: column; /* 垂直排列 */
             }
             .left-column {
                 max-width: 100%;
-                flex: 1 1 100%;
-                height: 300px; /* 手機上設置固定高度 */
+                flex: 1 1 auto;
+                height: 600px; /* 固定高度 */
+                position: relative; /* 保持相對定位 */
+                margin-bottom: 20px; /* 添加下方間距 */
                 order: 1; /* 圖片在上 */
+            }
+            .left-column img {
+                position: static; /* 改為靜態定位而非絕對定位 */
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 10px;
             }
             .right-column {
                 max-width: 100%;
-                flex: 1 1 100%;
-                padding: 10px 20px; /* 調整內距 */
+                flex: 1 1 auto;
+                padding: 10px 0; /* 調整內邊距 */
                 order: 2; /* 文字在下 */
             }
         }
@@ -108,7 +124,7 @@
             font-weight: bold;
             transition: background 0.3s, color 0.3s;
             text-align: center;
-            flex: 0 0 calc(25% - 20px); /* 寬螢幕時每行4個 */
+            flex: 0 0 calc(25% - 20px);
             box-sizing: border-box;
         }
         .button:hover {
@@ -117,7 +133,7 @@
         }
         @media (max-width: 768px) {
             .button {
-                flex: 0 0 calc(50% - 20px); /* 窄螢幕時每行2個 */
+                flex: 0 0 calc(50% - 20px);
             }
         }
         .footer {
@@ -129,15 +145,15 @@
 </head>
 <body>
     <div class="nav">
-        <a href="#home">首頁</a>
+        <a href="#home-section">首頁</a>
         <a href="#commission">委託資訊</a>
         <a href="#twitch">Twitch指令說明</a>
         <a href="#links">更多連結</a>
     </div>
 
     <div class="container">
-        <!-- 首頁 -->
-        <div id="home" class="section">
+        <!-- 首頁獨立區塊 -->
+        <section id="home-section">
             <h1>RuwayHsu滷滷熊熊</h1>
             <div class="home-content">
                 <div class="left-column">
@@ -172,7 +188,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- 委託資訊 -->
         <div id="commission" class="section">
@@ -211,7 +227,7 @@
             </ul>
             <h3>可使用指令</h3>
             <ul>
-                <li><strong>!dc</strong> - 機器奇怪的機器人會輸出Zen Studio的Discord群組連結</li>
+                <li><strong>!dc</strong> - 機器人會輸出Zen Studio的Discord群組連結</li>
                 <li><strong>!yt</strong> - 機器人會輸出我的YouTube頻道連結</li>
                 <li><strong>!osu</strong> - 機器人會輸出我的osu!個人檔案連結</li>
             </ul>
