--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h1>RuwayHsu滷滷熊熊</h1>
             <div class="home-content">
                 <div class="left-column">
-                    <img src="https://cdn.discordapp.com/attachments/1240945365511835769/1366102528030277662/Profolio.png?ex=680fb99f&is=680e681f&hm=676c268c750e5b938d6ffc6fd54fdf422f74978df2a60cf99111edbf6edfb489&" alt="RuwayHsu">
+                    <img src="https://imglink.io/i/RpAwo" alt="RuwayHsu">
                 </div>
                 <div class="right-column">
                     <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
@@ -258,6 +258,8 @@
                 <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
             </div>
         </div>
+        
+
     </div>
 
     <div class="footer">
