--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
         <a href="#home-section">首頁</a>
         <a href="#commission">委託資訊</a>
         <a href="#twitch">Twitch指令說明</a>
+        <a href="#skills">所學技能</a>
         <a href="#links">更多連結</a>
     </div>
 
@@ -157,7 +158,7 @@
             <h1>RuwayHsu滷滷熊熊</h1>
             <div class="home-content">
                 <div class="left-column">
-                    <img src="https://imglink.io/i/RpAwo" alt="RuwayHsu">
+                    <img src="https://a.imglink.io/RpAwo.png" alt="RuwayHsu">
                 </div>
                 <div class="right-column">
                     <h2>RuwayHsu滷滷熊熊루루셩셩</h2>
@@ -243,6 +244,18 @@
             <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
         </div>
 
+        <!-- 所學技能 -->
+        <div id="skills" class="section">
+            <h2>所學技能</h2>
+            <p>這裡是我目前所學的技能，未來會不定期更新。</p>
+            <h3>Python</h3>
+            <p>目前學習Python第三年並且邁向第四年，擅長開發Discord Bot以及Twitch Bot，目前正在學習透過Python使用DQN深度學習訓練</p>
+            <h3>C++ & C語言</h3>
+            <p>C++是一開始接觸程式語言的第一個學習語言，從高一到高三都是使用C++語言開發，目前透過單人自學能力做出一個使用C++語言開發的連點器，那C語言的部分是從高三至目前在學校普遍使用的語言，目前沒有任何開發項目使用C語言開發</p>
+            <h3>HTML & CSS & JavaScript</h3>
+            <p>網頁語言與JS目前比較少使用，因為個人擅長後端而不是前端，但因為V圈小工具需要大量的UI小工具，所以最近開始將學習主力轉移到網站語言以及JS，目前開發過YouTube音樂擷取器、番茄鐘工具、其他小工具以及此網站</p>
+            
+        </div>
         <!-- 更多連結 -->
         <div id="links" class="section">
             <h2>更多連結</h2>
@@ -258,8 +271,6 @@
                 <a href="https://www.threads.net/@ruwayhsupbc" target="_blank" class="button">Threads</a>
             </div>
         </div>
-        
-
     </div>
 
     <div class="footer">
