--- a/index.html
+++ b/index.html
@@ -136,10 +136,96 @@
                 flex: 0 0 calc(50% - 20px);
             }
         }
+        .partners-content {
+            display: flex;
+            gap: 20px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+            align-items: center;
+        }
+
+        .partner-left {
+            flex: 0 0 30%;
+            max-width: 30%;
+        }
+
+        .partner-left img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .partner-right {
+            flex: 1 1 70%;
+            text-align: left;
+            padding: 0 10px;
+        }
+
+        .partner-buttons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            width: 100%;
+        }
+
+        .partner-buttons .button {
+            background: #ff69b4;
+            color: #ffffff;
+            flex: 0 0 calc(25% - 15px);
+            min-width: 120px;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background 0.3s, color 0.3s;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+        }
+
+        .partner-buttons .button:hover {
+            background: #ffffff;
+            color: #ff69b4;
+        }
+
+        /* 協助夥伴響應式設計優化 */
+        @media (max-width: 960px) {
+            .partners-content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .partner-left {
+                max-width: 80%;
+                margin: 0 auto;
+            }
+
+            .partner-right {
+                max-width: 100%;
+                width: 100%;
+                flex: 1 1 auto;
+                padding: 15px 0;
+                text-align: left;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .partner-buttons .button {
+                flex: 0 0 calc(50% - 15px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .partner-buttons .button {
+                flex: 0 0 100%;
+            }
+        }
+        
         .footer {
             text-align: center;
             padding: 20px;
-            color: #ff99cc;
+            background: #1a1a2e;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -149,6 +235,7 @@
         <a href="#commission">委託資訊</a>
         <a href="#twitch">Twitch指令說明</a>
         <a href="#skills">所學技能</a>
+        <a href="#partners">協助夥伴</a>
         <a href="#links">更多連結</a>
     </div>
 
@@ -254,8 +341,68 @@
             <p>C++是一開始接觸程式語言的第一個學習語言，從高一到高三都是使用C++語言開發，目前透過單人自學能力做出一個使用C++語言開發的連點器，那C語言的部分是從高三至目前在學校普遍使用的語言，目前沒有任何開發項目使用C語言開發</p>
             <h3>HTML & CSS & JavaScript</h3>
             <p>網頁語言與JS目前比較少使用，因為個人擅長後端而不是前端，但因為V圈小工具需要大量的UI小工具，所以最近開始將學習主力轉移到網站語言以及JS，目前開發過YouTube音樂擷取器、番茄鐘工具、其他小工具以及此網站</p>
-            
+            <br>
+            <h3>Adobe After Effect</h3>
+            <p>沒有特別學習AE如何使用，只是覺得做出來的作品很喜歡有成就感，所以就默默地使用到現在，目前做過很多東西包括Loading的背景影片等皆為個人從0到成品</p>
+            <h3>Adobe Photoshop</h3>
+            <p>PS的部分其實沒有特別學著如何使用就是了，頂多需要做什麼查個網路用一用而已</p>
+            <h3>Adobe Illustrator</h3>
+            <p>AI使用比較頻繁，因為AI是製作圖形類素材的強大軟體之一，像是Loading的框架就是使用AI做出來的，做過的東西不多就不獻醜了</p>
+            <h3>Adobe Premiere Pro</h3>
+            <p>老實講用來轉檔比較多w</p>
         </div>
+
+        <!-- 協助夥伴 -->
+        <div id="partners" class="section">
+            <h2>協助夥伴</h2>
+            <div class="partners-content">
+                <div class="partner-left">
+                    <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
+                </div>
+                <div class="partner-right">
+                    <h3>Zenen</h3>
+                    <p>Zenen是我的第一位合作人，也是第一個我加入工作室的老闆，雖然身為老闆，但他並沒有在其他老闆上常看到的傲慢態度，反而會聽聽底下其他員工們的想法以及專業建議，並且統整出一個最佳方案</p>
+                    <h3>專長與強項</h3>
+                    <ul>
+                        <li>管理</li>
+                        <li>意見統整</li>
+                        <li>意見發想</li>
+                        <li>企劃發想者</li>
+                        <li>找尋合作夥伴</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="partner-buttons">
+                <a href="https://www.youtube.com/@zenen.vtuber/shorts" class="button">YouTube</a>
+                <a href="https://www.twitch.tv/zenenvtuber" class="button">Twitch</a>
+                <a href="https://discord.com/invite/dZpCb2PZT9" class="button">Discord</a>
+                <a href="https://zenen.my.canva.site/zenen" class="button">More Info</a>
+            </div>
+            <div class="partners-content">
+                <div class="partner-left">
+                    <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
+                </div>
+                <div class="partner-right">
+                    <h3>Zenen</h3>
+                    <p>Zenen是我的第一位合作人，也是第一個我加入工作室的老闆，雖然身為老闆，但他並沒有在其他老闆上常看到的傲慢態度，反而會聽聽底下其他員工們的想法以及專業建議，並且統整出一個最佳方案</p>
+                    <h3>專長與強項</h3>
+                    <ul>
+                        <li>管理</li>
+                        <li>意見統整</li>
+                        <li>意見發想</li>
+                        <li>企劃發想者</li>
+                        <li>找尋合作夥伴</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="partner-buttons">
+                <a href="https://www.youtube.com/@zenen.vtuber/shorts" class="button">YouTube</a>
+                <a href="https://www.twitch.tv/zenenvtuber" class="button">Twitch</a>
+                <a href="https://discord.com/invite/dZpCb2PZT9" class="button">Discord</a>
+                <a href="https://zenen.my.canva.site/zenen" class="button">More Info</a>
+            </div>
+        </div>
+
         <!-- 更多連結 -->
         <div id="links" class="section">
             <h2>更多連結</h2>
@@ -276,5 +423,5 @@
     <div class="footer">
         <p>&copy; 2025 RuwayHsu滷滷熊熊 | 跪求抖內支持</p>
     </div>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9376d140efe46787',t:'MTc0NTg0NjAxMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
