--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
         }
 
         .partner-buttons .button {
-            background: #ff69b4;
-            color: #ffffff;
+            color: #ff69b4;
             flex: 0 0 calc(25% - 15px);
             min-width: 120px;
             padding: 10px 15px;
+            border: 2px solid #ff69b4;
             border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
@@ -184,8 +184,8 @@
         }
 
         .partner-buttons .button:hover {
-            background: #ffffff;
-            color: #ff69b4;
+            background: #ff69b4;
+            color: #ffffff;
         }
 
         /* 協助夥伴響應式設計優化 */
@@ -356,11 +356,12 @@
         <div id="partners" class="section">
             <h2>協助夥伴</h2>
             <div class="partners-content">
+                <h2>Zenen</h2>
                 <div class="partner-left">
                     <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
                 </div>
                 <div class="partner-right">
-                    <h3>Zenen</h3>
+                    <h3>介紹</h3>
                     <p>Zenen是我的第一位合作人，也是第一個我加入工作室的老闆，雖然身為老闆，但他並沒有在其他老闆上常看到的傲慢態度，反而會聽聽底下其他員工們的想法以及專業建議，並且統整出一個最佳方案</p>
                     <h3>專長與強項</h3>
                     <ul>
@@ -379,12 +380,18 @@
                 <a href="https://zenen.my.canva.site/zenen" class="button">More Info</a>
             </div>
             <div class="partners-content">
+                <h2>Zenen</h2>
                 <div class="partner-left">
                     <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
                 </div>
                 <div class="partner-right">
-                    <h3>Zenen</h3>
+                    <h3>介紹</h3>
                     <p>Zenen是我的第一位合作人，也是第一個我加入工作室的老闆，雖然身為老闆，但他並沒有在其他老闆上常看到的傲慢態度，反而會聽聽底下其他員工們的想法以及專業建議，並且統整出一個最佳方案</p>
+                    <h3>人物設定</h3>
+                    <p>『現在是奧多前28年（西元2022年），終於...能和大家聯繫了我來自奧多3年（西元2053年）。透過蓋亞母親的協助穿越時間線來到這裡，目的是為了能修正未來，讓我們人類族能重新與高我聯繫，並從「命迴題」中揚升。』</p>
+                    <p>『在未來，我們時空裡的人類族活在幻象中，幻象是掉入深井無法求援的孤寂，也是蜷縮斷垣殘壁毫無遮蔽的寒慄，但那不是被加諸的危害，而是自身創造的實像。』</p>        
+                    <p>『為了得到永續能源與永生，地球戰爭持續數年，使得環境逐漸與火星相似，甚至已將魔爪伸向銀河系，但他們並不知道擁有越多的同時也種下無數仇恨的種子，最終得到提升的只剩戰爭檔次。』</p>                        
+                    <p>『被忘卻的「命迴題」最終成了膚淺的儀式…。』</p>                        
                     <h3>專長與強項</h3>
                     <ul>
                         <li>管理</li>
