--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         }
 
         .partner-buttons .button {
-            background: #ff69b4;
-            color: #ffffff;
+            border: 2px solid #ff69b4;
+            color: #ff69b4;
             padding: 10px 20px;
             border-radius: 5px;
             text-decoration: none;
@@ -193,8 +193,8 @@
         }
 
         .partner-buttons .button:hover {
-            background: #ffffff;
-            color: #ff69b4;
+            background: #ff69b4;
+            color: #ffffff;
         }
 
         @media (max-width: 960px) {
