--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         <a href="#twitch">Twitch指令說明</a>
         <a href="#skills">所學技能</a>
         <a href="#partners">協助夥伴</a>
+        <a href="#donators">抖內人士</a>
         <a href="#links">更多連結</a>
     </div>
 
