--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
         }
         .footer {
             text-align: center;
-            padding: 20px;
+            color: #ffb8db;
+            padding: 10px;
             background: #1a1a2e;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         .partner-header {
             text-align: left;
@@ -269,9 +270,11 @@
         <a href="#skills">所學技能</a>
         <a href="#partners">協作夥伴與贊助者</a>
         <a href="#donators">抖內人士</a>
+        <a href="#achievement">成就</a>
         <a href="#links">更多連結</a>
     </div>
 
+    <!-- 首頁 -->
     <div class="container">
         <section id="home-section">
             <h1>RuwayHsu滷滷熊熊</h1>
@@ -310,6 +313,7 @@
             </div>
         </section>
 
+        <!-- 委託資訊 -->
         <div id="commission" class="section">
             <h2>委託資訊</h2>
             <h3>Discord Bot客製化服務</h3>
@@ -336,6 +340,7 @@
             </ul>
         </div>
 
+        <!-- Twitch指令說明 -->
         <div id="twitch" class="section">
             <h2>Twitch指令說明</h2>
             <h3>指令使用說明</h3>
@@ -361,6 +366,7 @@
             <p>以下為抖內時會贈送的貢丸以及加成比例 (請參考附件圖片)</p>
         </div>
 
+        <!-- 所學技能 -->
         <div id="skills" class="section">
             <h2>所學技能</h2>
             <p>這裡是我目前所學的技能，未來會不定期更新。</p>
@@ -381,6 +387,7 @@
             <p>老實講用來轉檔比較多w</p>
         </div>
 
+        <!-- 協作夥伴與贊助者 -->
         <div id="partners" class="section">
             <h2>協作夥伴與贊助者</h2>
             <div class="partner-header">
@@ -420,6 +427,17 @@
                     <h3>人物設定</h3>
                     <p>來自十一次元的懶惰拖稿睡魔, 承接各式委託。</p>
                     <p>愛睡覺和喜歡三角形</p>
+                    <h3>委託內容</h3>
+                    <ul>
+                        <li>插圖</li>
+                        <li>二次創作</li>
+                        <li>表情符號&徽章</li>
+                        <li>vtuber</li>
+                        <li>Live2D 動畫</li>
+                        <li>Live2D 建模</li>
+                        <li>2D 動畫</li>
+                        <li>平面設計</li>
+                    </ul>
                 </div>
             </div>
             <div class="partner-buttons">
@@ -429,6 +447,7 @@
             </div>
         </div>
 
+        <!-- 抖內人士 -->    
         <div id="donators" class="section">
             <h2>抖內人士</h2>
             <div class="donators-grid">
@@ -484,6 +503,22 @@
             </div>
         </div>
 
+        <!-- 成就 -->
+        <div id="achievement" class="section">
+            <h2>成就</h2>
+            <ul>
+                <li>2023年2月與Zenen合作並在12月開始長期合作成為Zen Studio開發者</li>
+                <li>2023年6月推特突破500追</li>
+                <li>2023年6月使用滑鼠鍵盤osu!達到全球100000排名</li>
+                <li>2023年6月達到台V滑鼠鍵盤osu!第一</li>
+                <li>2023年12月達成Twitch實況盟友要求</li>
+                <li>2024年11月8日使用滑鼠鍵盤達成osu!全球50000排名</li>
+                <li>2024年11月8日使用滑鼠鍵盤達成osu!全球50000排名</li>
+                <li>2025年3月推特突破1000追</li>
+            </ul>
+        </div>
+
+        <!-- 更多連結 -->
         <div id="links" class="section">
             <h2>更多連結</h2>
             <p>這裡是一些社交媒體的按鈕，點擊可以訪問我的社交媒體頁面。</p>
