--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
             flex: 1;
             text-align: left;
         }
+        .partner-right a {
+            color: #ffffff;
+            margin: 0 15px;
+            text-decoration: underline;
+        }
+        .partner-right a:hover {
+            color: #ff69b4;
+        }
         .partner-buttons {
             display: flex;
             justify-content: center;
@@ -460,7 +468,14 @@
                         <p>『現在是奧多前28年（西元2022年），終於...能和大家聯繫了我來自奧多3年（西元2053年）。透過蓋亞母親的協助穿越時間線來到這裡，目的是為了能修正未來，讓我們人類族能重新與高我聯繫，並從「命迴題」中揚升。』</p>
                         <p>『在未來，我們時空裡的人類族活在幻象中，幻象是掉入深井無法求援的孤寂，也是蜷縮斷垣殘壁毫無遮蔽的寒慄，但那不是被加諸的危害，而是自身創造的實像。』</p>        
                         <p>『為了得到永續能源與永生，地球戰爭持續數年，使得環境逐漸與火星相似，甚至已將魔爪伸向銀河系，但他們並不知道擁有越多的同時也種下無數仇恨的種子，最終得到提升的只剩戰爭檔次。』</p>                        
-                        <p>『被忘卻的「命迴題」最終成了膚淺的儀式…。』</p>                        
+                        <p>『被忘卻的「命迴題」最終成了膚淺的儀式…。』</p>  
+                        <h3>工作室成員</h3>
+                        <ul>
+                            <li><a href="https://zenen.my.canva.site/zenen">Zenen禪音</a></li>
+                            <li><a href="https://www.youtube.com/@BATLE.vtuber">Batle巴特</a></li>
+                            <li><a href="https://www.youtube.com/@soulkaos.vtuber">Soul Kaos蘇凱奧</a></li>
+                            <li><a href="https://ruwayhsu.github.io/">RuwayHsu滷滷熊熊</a></li>
+                        </ul>                  
                     </div>
                 </div>
                 <div class="partner-buttons">
