--- a/index.html
+++ b/index.html
@@ -335,7 +335,14 @@
             padding: 10px;
             text-align: center;
             font-size: 24px;
-            color: white;
+        }
+        .custom-table th {
+            color: #ff69b4;
+            text-shadow: 0px 0px 8px #ff69b4;
+        }
+        .custom-table td {
+            color: #ffffff;
+            text-shadow: 0px 0px 8px #ffffff;
         }
         .custom-table th {
             border-bottom: 2px solid white;
@@ -496,7 +503,7 @@
             </div>
 
             <div id="schedule" class="section">
-                <h2>Schedule</h2>
+                <h2>周表</h2>
                 <table class="custom-table">
                     <thead>
                         <tr>
@@ -505,7 +512,7 @@
                         </tr>
                     </thead>
                     <tbody id="scheduleTableBody">
-                        <!-- 這裡將由 JavaScript 動態填充 -->
+                        <!-- 填充吧寶貝 -->
                     </tbody>
                 </table>
             </div>
