--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
     <div class="nav">
         <a href="#home-section">首頁</a>
         <a href="#commission">委託資訊</a>
+        <a href="#schedule">我的周表</a>
         <a href="#twitch">Twitch指令說明</a>
         <a href="#skills">所學技能</a>
         <a href="#partners">協作夥伴與贊助者</a>
@@ -428,6 +429,21 @@
                     <li>根據功能困難度定價1單位，分為1000、1500、2000，困難度可以進行討論而定義</li>
                 </ul>
             </div>
+            
+            <div id="schedule" class="section">
+                <h2>我的周表</h2>
+                <table class="custom-table">
+                    <thead>
+                        <tr>
+                            <th>日期</th>
+                            <th>計畫</th>
+                        </tr>
+                    </thead>
+                    <tbody id="scheduleTableBody">
+                        <!-- 填充吧寶貝 -->
+                    </tbody>
+                </table>
+            </div>
 
             <div id="twitch" class="section">
                 <h2>Twitch指令說明</h2>
@@ -498,21 +514,6 @@
                             <td>25%</td>
                             <td>37500</td>
                         </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div id="schedule" class="section">
-                <h2>周表</h2>
-                <table class="custom-table">
-                    <thead>
-                        <tr>
-                            <th>日期</th>
-                            <th>計畫</th>
-                        </tr>
-                    </thead>
-                    <tbody id="scheduleTableBody">
-                        <!-- 填充吧寶貝 -->
                     </tbody>
                 </table>
             </div>
