--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
             
             <div id="schedule" class="section">
                 <h2>我的周表</h2>
+                <h3>這真的會實時更新!!!</h3>
                 <table class="custom-table">
                     <thead>
                         <tr>
