--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         <img src="https://a.imglink.io/RbWx4.jpg" alt="Zenen">
                     </div>
                     <div class="partner-right">
-                        <h3>介紹</h3>
+                        <h3>熊熊真心話</h3>
                         <p>Zenen是我的第一位合作人，也是第一個我加入工作室的老闆，雖然身為老闆，但他並沒有在其他老闆上常看到的傲慢態度，反而會聽聽底下其他員工們的想法以及專業建議，並且統整出一個最佳方案。</p>
                         <h3>人物設定</h3>
                         <p>『現在是奧多前28年（西元2022年），終於...能和大家聯繫了我來自奧多3年（西元2053年）。透過蓋亞母親的協助穿越時間線來到這裡，目的是為了能修正未來，讓我們人類族能重新與高我聯繫，並從「命迴題」中揚升。』</p>
@@ -591,7 +591,7 @@
                         <img src="https://a.imglink.io/Rs6Zg.jpg" alt="Muika">
                     </div>
                     <div class="partner-right">
-                        <h3>介紹</h3>
+                        <h3>熊熊真心話</h3>
                         <p>Muika目前在v圈是一條龍繪師以及設計師，並且人超好溝通!!通靈能力也很厲害!!，所以如果想要找他委託不需要感到害怕，她很好溝通真的!!!，並且價格沒有高貴台灣繪師價格反而是平民價，而且還比較優質(阿熊認證)，大推大推!!</p>
                         <h3>人物設定</h3>
                         <p>來自十一次元的懶惰拖稿睡魔, 承接各式委託。</p>
