--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Open Graph 標籤 -->
     <meta property="og:title" content="RuwayHsu滷滷熊熊">
-    <meta property="og:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">
+    <meta property="og:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
+    <!--<meta property="og:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
     <meta property="og:image" content="https://a.imglink.io/RpAwo.png">
     <meta property="og:url" content="https://ruwayhsu.github.io/">
     <meta property="og:type" content="website">
