--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="twitter:description" content="目前網站還沒完工!!請稍後再撥!!逼逼~~">
     <!--<meta name="twitter:description" content="既然你看到這個了那我就說說這是什麼吧，這是一個有我的介紹、委託資訊、技能與社群連結的網站歡迎瀏覽支持我一下感謝感恩。">-->
     <meta name="twitter:image" content="https://a.imglink.io/RpAwo.png">
+    
+    <link rel="icon" type="image/png" href="https://a.imglink.io/S9PuB.png">
     <title>RuwayHsu滷滷熊熊</title>
     <style>
         body {
