--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                     <div class="partner-right">
                         <h3>熊熊真心話</h3>
                         <p>阿嵐是我認為御姊風格類模型最厲害的一條龍繪師，當初會看見阿嵐的原因是因為妍妍Q版自定義模型 的販售，接著仔細去看他的作品才發現他的御姊模型很香ww(x，那因為真的很香所以就委託頭貼試看看結果光是草圖就愛了哈哈，總之有姊姊風格需求的人們可以找阿嵐，大推!!!</p>
-                        <img src="https://pbs.twimg.com/media/GNMr27XbgAAPlIq?format=jpg&name=medium" alt="阿嵐可愛圖">
+                        <img src="https://a.imglink.io/S9p4W.jpg" alt="阿嵐可愛圖">
                     </div>
                 </div>
                 <div class="partner-buttons">
